--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,9 @@
   },
   "author": "none",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.2"
+  }
 }
