--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI= mongodb+srv://devbharu04:SpBnLVyneW7951fg@cluster0.eq1cq.mongodb.net/Amogh1
 JWT_SECRET=webhackers
+API_KEY=AIzaSyBipkpjtkh4Csk4BVX4yYaihmpBYeVax30
