--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,12 @@
     "@google/generative-ai": "^0.21.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
+    "react-native-gifted-charts": "^1.4.49",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
